# lmlm-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: create_lmlm_db.py  lmlm_database.json  lmlm_database.jsonl  prompts.jsonl
data/prompts/: prompts_cloze.jsonl  prompts_contextual_questions.jsonl  prompts_continuations.jsonl  prompts_direct_questions.jsonl  prompts_fewshot_questions.jsonl  prompts_paraphrased_questions.jsonl
src/lmlm-audit/: database_states.py  equivalence.py  lmlm.py  metrics.py  model_loader.py  prompting.py  run_audit.py
tests/: test_database_states.py  test_metrics.py  test_run_audit.py
