[project]
name = "lmlm-audit"
version = "0.1.0"
description = "A causal audit of forgetting and knowledge externalization in Limited Memory Language Models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
