[project]
name = "lmlm-audit"
version = "0.1.0"
description = "A causal audit of forgetting and knowledge externalization in Limited Memory Language Models."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.2",
    "lmlm",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<2",
    "python-dotenv>=1.2.2",
    "torch>=2.4,<2.5",
    "tqdm>=4.67.3",
    "transformers>=4.49,<4.50",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "wandb>=0.25.0",
]

[tool.uv.sources]
lmlm = { path = "../LMLM", editable = true }
